added contact sections, form, some buttons, minor SEO stuff

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 <html>
 
 <head>
-	<title>Dimbrox – Your Trusted Partner for Sustainable Digital AEC</title>
+	<title>Dimbrox – Sustainable AEC Consulting, BIM & Energy Efficiency</title>
 	<meta charset="utf-8">
 	<meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<meta name="description" content="">
-	<meta name="keywords" content="">
+	<meta name="description" content="Dimbrox is a consultancy focused on sustainable construction, BIM, and digital solutions for the AEC industry. We help engineers and architects build smarter with energy-efficient tools and expert consulting.">
+	<meta name="keywords" content="AEC consulting, sustainable construction, BIM, energy efficiency, building energy audit, digital twin, architecture, engineering, Dimbrox, digitalization">
+	<link rel="canonical" href="https://dimbrox.com/">
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 
@@ -26,9 +27,10 @@
 	<nav id="menu">
 		<ul class="links">
 			<li><a href="#banner">Home</a></li>
-			<li><a href="#what-we-do">What We Do?</a></li>
-			<li><a href="#cta">Why We Do It?</a></li>
-			<li><a href="#who-we-are">Who We Are?</a></li>
+			<li><a href="#what-we-do">What We Do</a></li>
+			<li><a href="#cta">Why We Do It</a></li>
+			<li><a href="#who-we-are">Who We Are</a></li>
+			<li><a href="#contact">Get in Touch</a></li>
 		</ul>
 	</nav><!-- Banner -->
 	<section id="banner">
@@ -37,13 +39,14 @@
 			<p>We are a family-driven company with deep roots in the AEC industry.<br>
 				Our mission: empowering sustainable construction through digital innovation and energy-efficient design.
 			</p>
+			<br><br><br><a href="#what-we-do" class="button icon fa-wpexplorer">Explore</a>
 		</div>
 		<video autoplay loop muted playsinline src="images/banner.mp4"></video>
 	</section><!-- Highlights -->
 	<section id="what-we-do" class="wrapper">
 		<div class="inner">
 			<header class="special">
-				<h2>What We Do?</h2>
+				<h2>What We Do</h2>
 				<p>At Dimbrox, we combine technical expertise with forward-thinking solutions to support the AEC
 					industry's transition toward sustainability and digital excellence. From energy audits to process
 					optimization and BIM consulting, we offer services that drive smarter, greener, and more efficient
@@ -52,7 +55,7 @@
 			<div class="highlights">
 				<section>
 					<div class="content">
-						<header><a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
+						<header><a href="#" class="icon fa-database"><span class="label">Icon</span></a>
 							<h3>Digitalization & BIM Consulting</h3>
 						</header>
 						<p>BIM model coordination, digital twin strategies, software integration.</p>
@@ -60,7 +63,7 @@
 				</section>
 				<section>
 					<div class="content">
-						<header><a href="#" class="icon fa-files-o"><span class="label">Icon</span></a>
+						<header><a href="#" class="icon fa-building-o"><span class="label">Icon</span></a>
 							<h3>Energy Efficiency & Sustainable Design</h3>
 						</header>
 						<p>Dynamic simulation, thermal modeling, carbon footprint analysis.</p>
@@ -108,7 +111,7 @@
 	</section><!-- CTA -->
 	<section id="cta" class="wrapper">
 		<div class="inner">
-			<h2>Why Do We Do It?</h2>
+			<h2>Why Do We Do It</h2>
 			<p>We believe that the future of construction lies in the smart integration of sustainability and digital
 				technology. At Dimbrox, we're driven by the opportunity to make the built environment more efficient,
 				resilient, and responsible—through innovation, not just intention. Combining our backgrounds in
@@ -119,51 +122,112 @@
 	<section id="who-we-are" class="wrapper">
 		<div class="inner">
 			<header class="special">
-				<h2>Who We Are?</h2>
+				<h2>Who We Are</h2>
 				<p>Dimbrox is a family-founded consultancy at the crossroads of architecture, engineering, and digital
 					innovation. With deep roots in the AEC industry and a shared passion for sustainable design, we
 					combine hands-on experience with cutting-edge tools to help clients build smarter, greener, and more
 					efficient structures.</p>
 			</header>
 			<div class="content">
-				<div class="content">
-					<p>
-						<span class="image left"><img height="256" width="256" src="images/pic02.jpg"
-								alt="Milan Rashevski - Expert for energy efficiency of buildings"></span>
-						Milan Rashevski is an architect and energy consultant with over a decade of international
-						experience
-						in sustainable design, energy efficiency, and building performance simulation.
-						His work bridges cutting-edge research with real-world applications—ranging from dynamic energy
-						modeling and renewable energy systems to zero-energy building strategies.
-						Milan’s academic background, including a PhD in mathematical modeling and extensive
-						collaboration in
-						EU R&D projects, adds a strong scientific foundation to every project he undertakes.
-						<br><br>
-						At Dimbrox, Milan brings his deep expertise in low-carbon architecture and energy-smart building
-						technologies to support clients in designing the future of sustainable construction.
-					</p>
-				</div>
-				<div class="content">
-					<p>
-						<span class="image right"><img height="256" width="256" src="images/pic03.jpg"
-								alt="Diyan Rashevski - Expert for digitalization in the AEC industry" width="256"
-								height="256"></span>
-						Diyan Rashevski is a civil engineer and digitalization expert with a passion for transforming
-						the
-						AEC industry through technology.
-						With hands-on experience in construction, software development, and product strategy, he bridges
-						the
-						gap between engineering and digital tools.
-						As founder of Dimbrox and current COO of Creoox, Diyan focuses on building solutions that
-						improve
-						workflows, enhance collaboration, and support sustainable construction.
-						His work is grounded in both technical depth and a strong vision for the digital future of the
-						AEC
-						industry.
-					</p>
-				</div>
+				<p>
+					<span class="image left"><img height="256" width="256" src="images/pic02.jpg"
+							alt="Milan Rashevski - Expert for energy efficiency of buildings"></span>
+					Milan Rashevski is an architect and energy consultant with over a decade of international
+					experience
+					in sustainable design, energy efficiency, and building performance simulation.
+					His work bridges cutting-edge research with real-world applications—ranging from dynamic energy
+					modeling and renewable energy systems to zero-energy building strategies.
+					Milan’s academic background, including a PhD in mathematical modeling and extensive
+					collaboration in
+					EU R&D projects, adds a strong scientific foundation to every project he undertakes.
+					<br><br>
+					At Dimbrox, Milan brings his deep expertise in low-carbon architecture and energy-smart building
+					technologies to support clients in designing the future of sustainable construction.
+					<br><a href="https://www.linkedin.com/in/milan-rashevski-37946327/"
+						class="button primary icon fa-linkedin-square">Let's Connect</a>
+				</p>
+			</div>
+			<div class="content">
+				<p>
+					<span class="image right"><img height="256" width="256" src="images/pic03.jpg"
+							alt="Diyan Rashevski - Expert for digitalization in the AEC industry" width="256"
+							height="256"></span>
+					Diyan Rashevski is a civil engineer and digitalization expert with a passion for transforming
+					the
+					AEC industry through technology.
+					With hands-on experience in construction, software development, and product strategy, he bridges
+					the
+					gap between engineering and digital tools.
+					As founder of Dimbrox and current COO of Creoox, Diyan focuses on building solutions that
+					improve
+					workflows, enhance collaboration, and support sustainable construction.
+					His work is grounded in both technical depth and a strong vision for the digital future of the
+					AEC industry.
+					<br><a href="https://www.linkedin.com/in/diyan-rashevski/"
+						class="button primary icon fa-linkedin-square">Let's Connect</a>
+				</p>
 			</div>
 	</section>
+	<section id="contact" class="wrapper style2">
+		<div class="inner">
+			<header class="major">
+				<h2>Get in Touch</h2>
+				<form method="post" action="https://formsubmit.co/63f564243444a9c7676407a5c34678e2">
+					<div class="row gtr-uniform">
+						<div class="col-6 col-12-xsmall">
+							<input type="text" name="name" id="name" value="" placeholder="Your Name">
+						</div>
+						<div class="col-6 col-12-xsmall">
+							<input type="email" name="email" id="email" value="" placeholder="Your Email">
+						</div>
+						<!-- Break -->
+						<!-- <div class="col-12">
+							<select name="category" id="category">
+								<option value="">- Select -</option>
+								<option value="alpha">Option alpha</option>
+								<option value="beta">Option beta</option>
+								<option value="gamma">Option gamma</option>
+								<option value="delta">Option delta</option>
+							</select>
+						</div> -->
+						<!-- Break -->
+						<!-- <div class="col-4 col-12-small">
+							<input type="radio" id="radio-alpha" name="radio" checked><label for="radio-alpha">Radio
+								alpha</label>
+						</div>
+						<div class="col-4 col-12-small">
+							<input type="radio" id="radio-beta" name="radio"><label for="radio-beta">Radio beta</label>
+						</div>
+						<div class="col-4 col-12-small">
+							<input type="radio" id="radio-gamma" name="radio"><label for="radio-gamma">Radio
+								gamma</label>
+						</div> -->
+						<!-- Break -->
+						<!-- <div class="col-6 col-12-small">
+							<input type="checkbox" id="checkbox-alpha" name="checkbox"><label
+								for="checkbox-alpha">Checkbox alpha</label>
+						</div>
+						<div class="col-6 col-12-small">
+							<input type="checkbox" id="checkbox-beta" name="checkbox" checked><label
+								for="checkbox-beta">Checkbox beta</label>
+						</div> -->
+						<!-- Break -->
+						<div class="col-12">
+							<textarea name="textarea" id="textarea" placeholder="Your message to us"
+								rows="6"></textarea>
+						</div>
+						<!-- Break -->
+						<div class="col-12">
+							<ul class="actions">
+								<li><input type="submit" value="Submit" class="primary"></li>
+								<li><input type="reset" value="Reset"></li>
+							</ul>
+						</div>
+					</div>
+				</form>
+		</div>
+	</section>
+
 	<!-- Testimonials -->
 	<!-- <section class="wrapper">
 		<div class="inner">
@@ -203,17 +267,40 @@
 				<section>
 					<h4>Quick Links</h4>
 					<ul class="alt">
-						<li><a href="#what-we-do">What We Do?</a></li>
-						<li><a href="#cta">Why We Do It?</a></li>
-						<li><a href="#who-we-are">Who We Are?</a></li>
+						<li><a href="#what-we-do">What We Do</a></li>
+						<li><a href="#cta">Why We Do It</a></li>
+						<li><a href="#who-we-are">Who We Are</a></li>
+						<li><a href="#contact">Get in Touch</a></li>
+					</ul>
+				</section>
+				<section>
+					<h4>Contact Info</h4>
+					<ul class="alt">
+						<li><strong>Phone:</strong>
+							<script>
+								const code = "+359";
+								const numberPrefix = "889 ";
+								const number = "25&#32;9&#49&nbsp;26"
+								const part1 = "3598"
+								const part2 = "892"
+								const part3 = "59126"
+								const raw = part1 + part2 + part3;
+								const display = `${code}&thinsp;${numberPrefix}<span style="display:none;">xyz</span>${number}`;
+								const link = `tel:&#43;${raw}`;
+								document.write(`<a href="${link}">${display}</a>`);
+							</script>
+						</li>
+						<li><strong>Location:</strong> Sofia, Bulgaria</li>
 					</ul>
 				</section>
 				<section>
 					<h4>Connect With Us</h4>
 					<ul class="plain">
-						<li><a href="https://www.linkedin.com/in/diyan-rashevski/"><i class="icon fa-linkedin">&nbsp;</i>LinkedIn</a></li>
+						<li><a href="https://www.linkedin.com/in/diyan-rashevski/"><i
+									class="icon fa-linkedin">&nbsp;</i>LinkedIn</a></li>
 						<li><a href="https://github.com/drashevski/"><i class="icon fa-github">&nbsp;</i>Github</a></li>
-						<li><a href="https://x.com/diyan_rashevski/"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
+						<li><a href="https://x.com/diyan_rashevski/"><i class="icon fa-twitter">&nbsp;</i>Twitter</a>
+						</li>
 						<!-- <li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li> -->
 						<!-- <li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li> -->
 					</ul>
