small mobile fixes

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 			</header>
 			<div class="content">
 				<p>
-					<span class="image left"><img height="256" width="256" src="images/pic02.jpg"
+					<span class="image left"><img src="images/pic02.jpg"
 							alt="Milan Rashevski - Expert for energy efficiency of buildings"></span>
 					Milan Rashevski is an architect and energy consultant with over a decade of international
 					experience
@@ -149,7 +149,7 @@
 			</div>
 			<div class="content">
 				<p>
-					<span class="image right"><img height="256" width="256" src="images/pic03.jpg"
+					<span class="image right"><img src="images/pic03.jpg"
 							alt="Diyan Rashevski - Expert for digitalization in the AEC industry" width="256"
 							height="256"></span>
 					Diyan Rashevski is a civil engineer and digitalization expert with a passion for transforming
