--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	</nav><!-- Banner -->
 	<section id="banner">
 		<div class="inner">
-			<h1>Dimbrox</h1>
+			<h1>Dimbrox - Sustainable Innovation in AEC</h1>
 			<p>We are a family-driven company with deep roots in the AEC industry.<br>
 				Our mission: empowering sustainable construction through digital innovation and energy-efficient design.
 			</p>
