--- a/index.html
+++ b/index.html
@@ -183,18 +183,18 @@
 		<div class="inner">
 			<header class="major">
 				<h2>Get in Touch</h2>
-				<form method="post" action="https://formsubmit.co/63f564243444a9c7676407a5c34678e2">
-					<div class="row gtr-uniform">
-						<div class="col-6 col-12-xsmall">
-							<label for="name">Name</label>
-							<input type="text" name="name" id="name" placeholder="Your Name">
-						</div>
-						<div class="col-6 col-12-xsmall">
-							<label for="email">Email</label>
-							<input type="email" name="email" id="email" placeholder="Your Email">
-						</div>
-						<!-- Break -->
-						<!-- <div class="col-12">
+				<form action="https://formsubmit.co/diyan.rashevski@dimbrox.com" method="POST" />
+				<div class="row gtr-uniform">
+					<div class="col-6 col-12-xsmall">
+						<label for="name">Name</label>
+						<input type="text" name="name" id="name" placeholder="Your Name">
+					</div>
+					<div class="col-6 col-12-xsmall">
+						<label for="email">Email</label>
+						<input type="email" name="email" id="email" placeholder="Your Email">
+					</div>
+					<!-- Break -->
+					<!-- <div class="col-12">
 							<select name="category" id="category">
 								<option value="">- Select -</option>
 								<option value="alpha">Option alpha</option>
@@ -203,8 +203,8 @@
 								<option value="delta">Option delta</option>
 							</select>
 						</div> -->
-						<!-- Break -->
-						<!-- <div class="col-4 col-12-small">
+					<!-- Break -->
+					<!-- <div class="col-4 col-12-small">
 							<input type="radio" id="radio-alpha" name="radio" checked><label for="radio-alpha">Radio
 								alpha</label>
 						</div>
@@ -215,8 +215,8 @@
 							<input type="radio" id="radio-gamma" name="radio"><label for="radio-gamma">Radio
 								gamma</label>
 						</div> -->
-						<!-- Break -->
-						<!-- <div class="col-6 col-12-small">
+					<!-- Break -->
+					<!-- <div class="col-6 col-12-small">
 							<input type="checkbox" id="checkbox-alpha" name="checkbox"><label
 								for="checkbox-alpha">Checkbox alpha</label>
 						</div>
@@ -224,20 +224,19 @@
 							<input type="checkbox" id="checkbox-beta" name="checkbox" checked><label
 								for="checkbox-beta">Checkbox beta</label>
 						</div> -->
-						<!-- Break -->
-						<div class="col-12">
-							<label for="textarea">Message</label>
-							<textarea name="textarea" id="textarea" placeholder="Your message to us"
-								rows="6"></textarea>
-						</div>
-						<!-- Break -->
-						<div class="col-12">
-							<ul class="actions">
-								<li><input type="submit" value="Submit" class="primary"></li>
-								<li><input type="reset" value="Reset"></li>
-							</ul>
-						</div>
+					<!-- Break -->
+					<div class="col-12">
+						<label for="textarea">Message</label>
+						<textarea name="textarea" id="textarea" placeholder="Your message to us" rows="6"></textarea>
 					</div>
+					<!-- Break -->
+					<div class="col-12">
+						<ul class="actions">
+							<li><input type="submit" value="Submit" class="primary"></li>
+							<li><input type="reset" value="Reset"></li>
+						</ul>
+					</div>
+				</div>
 				</form>
 		</div>
 	</section>
