added contct & icon

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 				<section>
 					<h4>Contact Info</h4>
 					<ul class="alt">
-						<li><strong>Phone:</strong>
+						<li><strong class="icon fa-phone"> Phone:</strong>
 							<script>
 								const code = "+359";
 								const numberPrefix = "889 ";
@@ -303,7 +303,10 @@
 								document.write(`<a href="${link}">${display}</a>`);
 							</script>
 						</li>
-						<li><strong>Location:</strong> Sofia, Bulgaria</li>
+						<li><strong class="icon fa-map-marker"> Location:</strong> Sofia, Bulgaria</li>
+						<li><strong class="icon fa-envelope-o"> E-mail: </strong><a
+								href="mailto:contact@dimbrox.com">contact@dimbrox.com</a>
+						</li>
 					</ul>
 				</section>
 				<section>
