--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body class="is-preload">
 
 	<!-- Header -->
-	<header id="header"><a class="logo" href="index.html">Dimbrox</a>
+	<header id="header"><a class="logo" href="/">Dimbrox</a>
 		<nav><a href="#menu">Menu</a>
 		</nav>
 	</header><!-- Nav -->
@@ -315,9 +315,9 @@
 						<li><a href="https://www.linkedin.com/in/diyan-rashevski/"><i
 									class="icon fa-linkedin">&nbsp;</i>LinkedIn</a></li>
 						<li><a href="https://github.com/drashevski/"><i class="icon fa-github">&nbsp;</i>Github</a></li>
-						<li><a href="https://x.com/diyan_rashevski/"><i class="icon fa-twitter">&nbsp;</i>Twitter</a>
-						</li>
-						<!-- <li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li> -->
+						<li><a href="https://www.facebook.com/share/1Ex8jVVxwx/"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
+						<li><a href="https://x.com/diyan_rashevski/"><i class="icon fa-twitter">&nbsp;</i>Twitter (X)</a>
+						</li>						
 						<!-- <li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li> -->
 					</ul>
 				</section>
