--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 		<div class="inner">
 			<header class="major">
 				<h2>Get in Touch</h2>
-				<form action="https://formsubmit.co/contact@dimbrox.com" method="POST" />
+				<form action="https://formsubmit.co/b21bdcf5b5f0670bab44eb673638ab6b" method="POST" />
 				<div class="row gtr-uniform">
 					<div class="col-6 col-12-xsmall">
 						<label for="name">Name</label>
