improved form SEO accessibility

--- a/index.html
+++ b/index.html
@@ -183,60 +183,30 @@
 		<div class="inner">
 			<header class="major">
 				<h2>Get in Touch</h2>
-				<form action="https://formsubmit.co/b21bdcf5b5f0670bab44eb673638ab6b" method="POST" />
-				<div class="row gtr-uniform">
-					<div class="col-6 col-12-xsmall">
-						<label for="name">Name</label>
-						<input type="text" name="name" id="name" placeholder="Your Name">
-					</div>
-					<div class="col-6 col-12-xsmall">
-						<label for="email">Email</label>
-						<input type="email" name="email" id="email" placeholder="Your Email">
-					</div>
-					<!-- Break -->
-					<!-- <div class="col-12">
-							<select name="category" id="category">
-								<option value="">- Select -</option>
-								<option value="alpha">Option alpha</option>
-								<option value="beta">Option beta</option>
-								<option value="gamma">Option gamma</option>
-								<option value="delta">Option delta</option>
-							</select>
-						</div> -->
-					<!-- Break -->
-					<!-- <div class="col-4 col-12-small">
-							<input type="radio" id="radio-alpha" name="radio" checked><label for="radio-alpha">Radio
-								alpha</label>
+				<form action="https://formsubmit.co/b21bdcf5b5f0670bab44eb673638ab6b" method="POST">
+					<div class="row gtr-uniform">
+						<div class="col-6 col-12-xsmall">
+							<label for="name">Name</label>
+							<input type="text" name="name" id="name" placeholder="Your Name" required
+								aria-required="true">
 						</div>
-						<div class="col-4 col-12-small">
-							<input type="radio" id="radio-beta" name="radio"><label for="radio-beta">Radio beta</label>
+						<div class="col-6 col-12-xsmall">
+							<label for="email">Email</label>
+							<input type="email" name="email" id="email" placeholder="Your Email" required
+								aria-required="true">
 						</div>
-						<div class="col-4 col-12-small">
-							<input type="radio" id="radio-gamma" name="radio"><label for="radio-gamma">Radio
-								gamma</label>
-						</div> -->
-					<!-- Break -->
-					<!-- <div class="col-6 col-12-small">
-							<input type="checkbox" id="checkbox-alpha" name="checkbox"><label
-								for="checkbox-alpha">Checkbox alpha</label>
+						<div class="col-12">
+							<label for="textarea">Message</label>
+							<textarea name="message" id="textarea" placeholder="Your message to us" rows="6" required
+								aria-required="true"></textarea>
 						</div>
-						<div class="col-6 col-12-small">
-							<input type="checkbox" id="checkbox-beta" name="checkbox" checked><label
-								for="checkbox-beta">Checkbox beta</label>
-						</div> -->
-					<!-- Break -->
-					<div class="col-12">
-						<label for="textarea">Message</label>
-						<textarea name="textarea" id="textarea" placeholder="Your message to us" rows="6"></textarea>
+						<div class="col-12">
+							<ul class="actions">
+								<li><button type="submit" class="primary">Submit</button></li>
+								<li><button type="reset">Reset</button></li>
+							</ul>
+						</div>
 					</div>
-					<!-- Break -->
-					<div class="col-12">
-						<ul class="actions">
-							<li><input type="submit" value="Submit" class="primary"></li>
-							<li><input type="reset" value="Reset"></li>
-						</ul>
-					</div>
-				</div>
 				</form>
 		</div>
 	</section>
@@ -315,9 +285,11 @@
 						<li><a href="https://www.linkedin.com/in/diyan-rashevski/"><i
 									class="icon fa-linkedin">&nbsp;</i>LinkedIn</a></li>
 						<li><a href="https://github.com/drashevski/"><i class="icon fa-github">&nbsp;</i>Github</a></li>
-						<li><a href="https://www.facebook.com/share/1Ex8jVVxwx/"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
-						<li><a href="https://x.com/diyan_rashevski/"><i class="icon fa-twitter">&nbsp;</i>Twitter (X)</a>
-						</li>						
+						<li><a href="https://www.facebook.com/share/1Ex8jVVxwx/"><i
+									class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
+						<li><a href="https://x.com/diyan_rashevski/"><i class="icon fa-twitter">&nbsp;</i>Twitter
+								(X)</a>
+						</li>
 						<!-- <li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li> -->
 					</ul>
 				</section>
