small SEO + renamed CTA

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<ul class="links">
 			<li><a href="#banner">Home</a></li>
 			<li><a href="#what-we-do">What We Do</a></li>
-			<li><a href="#cta">Why We Do It</a></li>
+			<li><a href="#why-we-do-it">Why We Do It</a></li>
 			<li><a href="#who-we-are">Who We Are</a></li>
 			<li><a href="#contact">Get in Touch</a></li>
 		</ul>
@@ -65,7 +65,9 @@
 			<div class="highlights">
 				<section>
 					<div class="content">
-						<header><a href="#" class="icon fa-database"><span class="label">Icon BIM</span></a>
+						<header><a href="#" class="icon fa-database"
+								aria-label="Read more about Digitalization and BIM Consulting">
+								<span class="label" aria-hidden="true">Icon BIM</span></a>
 							<h3>Digitalization & BIM Consulting</h3>
 						</header>
 						<p>BIM model coordination, digital twin strategies, software integration.</p>
@@ -73,8 +75,9 @@
 				</section>
 				<section>
 					<div class="content">
-						<header><a href="#" class="icon fa-building-o"><span class="label">Icon Energy
-									Efficiency</span></a>
+						<header><a href="#" class="icon fa-building-o"
+								aria-label="Read more about Energy Efficiency & Sustainable Design">
+								<span class="label" aria-hidden="true">Icon Energy Efficiency</span></a>
 							<h3>Energy Efficiency & Sustainable Design</h3>
 						</header>
 						<p>Dynamic simulation, thermal modeling, carbon footprint analysis.</p>
@@ -82,25 +85,29 @@
 				</section>
 				<section>
 					<div class="content">
-						<header><a href="#" class="icon fa-floppy-o"><span class="label">Icon Custom Software</span></a>
+						<header><a href="#" class="icon fa-floppy-o"
+								aria-label="Read more about Custom Software & Tools">
+								<span class="label" aria-hidden="true">Icon Custom Software</span></a>
 							<h3>Custom Software & Tools</h3>
 						</header>
-						<p>UI/UX for engineers, prototyping tools, integrations (highlight if you build tools
-							internally).</p>
+						<p>UI/UX for engineers from engineers, prototyping tools, integrations.</p>
 					</div>
 				</section>
 				<section>
 					<div class="content">
-						<header><a href="#" class="icon fa-line-chart"><span class="label">Icon R&D</span></a>
+						<header><a href="#" class="icon fa-line-chart"
+								aria-label="Read more about Research & Innovation">
+								<span class="label" aria-hidden="true">Icon R&D</span></a>
 							<h3>Research & Innovation</h3>
 						</header>
-						<p>EU research collaboration, open-source initiatives, academic partnership (relevant to both of
-							you).</p>
+						<p>EU research collaboration, open-source initiatives, academic partnership.</p>
 					</div>
 				</section>
 				<section>
 					<div class="content">
-						<header><a href="#" class="icon fa-paper-plane-o"><span class="label">Icon Consulting</span></a>
+						<header><a href="#" class="icon fa-paper-plane-o"
+								aria-label="Read more about Consulting & Process Optimization">
+								<span class="label" aria-hidden="true">Icon Consulting</span></a>
 							<h3>Consulting & Process Optimization</h3>
 						</header>
 						<p>We help AEC teams streamline workflows, adopt digital tools effectively, and optimize
@@ -110,7 +117,8 @@
 				</section>
 				<section>
 					<div class="content">
-						<header><a href="#" class="icon fa-qrcode"><span class="label">Icon Energy Audit</span></a>
+						<header><a href="#" class="icon fa-qrcode" aria-label="Read more about Building Energy Audit">
+								<span class="label" aria-hidden="true">Icon Energy Audit</span></a>
 							<h3>Building Energy Audit</h3>
 						</header>
 						<p>We assess the energy performance of buildings to identify inefficiencies and recommend
@@ -119,8 +127,8 @@
 				</section>
 			</div>
 		</div>
-	</section><!-- CTA -->
-	<section id="cta" class="wrapper">
+	</section>
+	<section id="why-we-do-it" class="wrapper">
 		<div class="inner">
 			<h2>Why Do We Do It</h2>
 			<p>We believe that the future of construction lies in the smart integration of sustainability and digital
@@ -251,7 +259,7 @@
 					<h4>Quick Links</h4>
 					<ul class="alt">
 						<li><a href="#what-we-do">What We Do</a></li>
-						<li><a href="#cta">Why We Do It</a></li>
+						<li><a href="#why-we-do-it">Why We Do It</a></li>
 						<li><a href="#who-we-are">Who We Are</a></li>
 						<li><a href="#contact">Get in Touch</a></li>
 					</ul>
