--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
 		content="AEC consulting, sustainable construction, BIM, energy efficiency, building energy audit, digital twin, architecture, engineering, Dimbrox, digitalization">
 	<meta name="theme-color" content="#004225">
 	<link rel="canonical" href="https://dimbrox.com/">
-	<link rel="preload" href="assets/css/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript>
-		<link rel="stylesheet" href="assets/css/main.css">
-	</noscript>
+	<link rel="stylesheet" href="assets/css/main.css">
 	<link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96" />
 	<link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
 	<link rel="shortcut icon" href="favicon/favicon.ico" />
@@ -191,7 +188,7 @@
 			</header>
 			<div class="content">
 				<p>
-					<span class="image left"><img src="images/pic02.jpg"
+					<span class="image left"><img src="images/pic02.jpg" loading="lazy"
 							alt="Milan Rashevski - Expert for energy efficiency of buildings"></span>
 					Milan Rashevski is an architect and energy consultant with over a decade of international
 					experience
@@ -210,7 +207,7 @@
 			</div>
 			<div class="content">
 				<p>
-					<span class="image right"><img src="images/pic03.jpg"
+					<span class="image right"><img src="images/pic03.jpg" loading="lazy"
 							alt="Diyan Rashevski - Expert for digitalization in the AEC industry" width="256"
 							height="256"></span>
 					Diyan Rashevski is a civil engineer and digitalization expert with a passion for transforming
@@ -332,12 +329,14 @@
 				<section>
 					<h4>Connect With Us</h4>
 					<ul class="plain">
-						<li><a href="https://www.linkedin.com/in/diyan-rashevski/"><i
+						<li><a href="https://www.linkedin.com/in/diyan-rashevski/" target="_blank" rel="noopener"><i
 									class="icon fa-linkedin">&nbsp;</i>LinkedIn</a></li>
-						<li><a href="https://github.com/drashevski/"><i class="icon fa-github">&nbsp;</i>Github</a></li>
-						<li><a href="https://www.facebook.com/share/1Ex8jVVxwx/"><i
+						<li><a href="https://github.com/drashevski/" target="_blank" rel="noopener"><i
+									class="icon fa-github">&nbsp;</i>Github</a></li>
+						<li><a href="https://www.facebook.com/share/1Ex8jVVxwx/" target="_blank" rel="noopener"><i
 									class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
-						<li><a href="https://x.com/diyan_rashevski/"><i class="icon fa-twitter">&nbsp;</i>Twitter
+						<li><a href="https://x.com/diyan_rashevski/" target="_blank" rel="noopener"><i
+									class="icon fa-twitter">&nbsp;</i>Twitter
 								(X)</a>
 						</li>
 						<!-- <li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li> -->
